Se creó con Colab

--- a/Laboratorio1ia2.ipynb
+++ b/Laboratorio1ia2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXkC8p6AeImmMAXTjNrqux",
+      "authorship_tag": "ABX9TyMnF6C63husdspT3pJF3qRx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,6 +62,30 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZtR-fQuagE0r",
+        "outputId": "a0c8495b-bade-4db1-8c49-ce37d259e34f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
